syntax = "proto3";

option go_package = "common/user";

package user;

import "google/api/annotations.proto";

service UserService{
        rpc Get(GetRequest) returns(GetResponse) {
        	option (google.api.http) = {
			get: "/user/{id}"
		};
        }
        rpc GetAll(GetAllRequest) returns(GetAllResponse) {
        	option (google.api.http) = {
			get: "/users"
		};
        }
}

message GetRequest {
        string id = 1;
}

message GetResponse {
        User user = 1;
}

message GetAllRequest {
}

message GetAllResponse {
        repeated User users = 1;
}

message User {
        string id = 1;
        string name = 2;
        string surname = 3;
}
